--- a/main.css
+++ b/main.css
@@ -36,8 +36,9 @@ body {
     font-weight: bold;
 }
 .header-main {
-    background-image: url(./img/bkg-main.jpg);
-    height: 300px;
+    background-image: url(./img/bkg-section.jpg);
+    height: 350px;
+    width: 100%;
 }
 .header-main .navigacija {
     background-color: #B01C1C;
@@ -48,7 +49,7 @@ body {
 .header-main .navigacija a:hover {
     background-color: #E21717;
 }
-.header-main .navigacija a:active{
+.header-main .navigacija .active{
     background-color: #E21717;
 
 }
@@ -65,7 +66,16 @@ body {
 .img-radovi {
     width: 50%;
     border-radius: 50%;
-    margin: 20px 0 60px 0;
+    margin: 10px 0 50px 0;
+}
+.main-footer {
+    background-color: #B01C1C;
+    text-align: center;
+    color: #fff;
+}
+.main-footer .col p {
+    padding: 25px 0 25px 0;
+    margin-bottom: auto;
 }
 /***********************************
             Helper classes 
