--- a/main.css
+++ b/main.css
@@ -36,6 +36,9 @@ body {
     font-weight: bold;
 }
 .header-main {
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
     background-image: url(./img/bkg-section.jpg);
     height: 350px;
     width: 100%;
